--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "build": "rollup -c",
-    "watch": "rollup -c -w"
+    "build": "node ./bin/build.js"
   },
   "dependencies": {
     "@splinetool/loader": "^1.9.46",
@@ -10,6 +9,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.3.0",
+    "esbuild": "0.24.0",
     "rollup": "^4.27.4",
     "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4"
